@@ -4,9 +4,15 @@ namespace dhope0000\LXDClient\Tools\Projects;
 
 use dhope0000\LXDClient\Tools\Utilities\StringTools;
 use dhope0000\LXDClient\Objects\Host;
+use dhope0000\LXDClient\Model\Users\AllowedProjects\FetchAllowedProjects;
 
 class GetProjectInfo
 {
+    public function __construct(FetchAllowedProjects $fetchAllowedProjects)
+    {
+        $this->fetchAllowedProjects = $fetchAllowedProjects;
+    }
+
     public function get(Host $host, string $projectName)
     {
         $project = $host->projects->info($projectName);
@@ -15,6 +21,7 @@ class GetProjectInfo
             $host,
             $project["used_by"]
         );
+        $project["users"] = $this->fetchAllowedProjects->fetchUsersCanAcessProject($host->getHostId(), $projectName);
         return $project;
     }
 }
