@@ -11,6 +11,7 @@ Added
     Show OS icon in sidebar (#296)
     Button to start an instance on creation (#294)
     LDAP user syncing & login (#171, #272, #300)
+    Show users who can access a project on project view
 
 Changed
     Support backups & backup schedules in different projects
@@ -30,7 +31,7 @@ Fixed
     Reseting user password by pressing enter leads to undefined behaviour (#282)
     Console session doubling input (#301)
     Remove card-columns from images which prevents a jumpy UI
-    Attempts to gather offline hosts metrics breaks script 
+    Attempts to gather offline hosts metrics breaks script
 
 0.10.2 - 30/10/2020
 
